[gd_scene load_steps=7 format=2]

[ext_resource path="res://menu/assets/KdamThmorPro-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://game/paneller/market.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 28
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 3 )

[node name="market_panel" type="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -373.0
margin_top = -204.0
margin_right = 373.0
margin_bottom = 204.0
theme = SubResource( 2 )
script = ExtResource( 2 )

[node name="Yazilar" type="VBoxContainer" parent="."]
margin_left = 60.0
margin_top = 49.0
margin_right = 373.0
margin_bottom = 408.0

[node name="yakit" type="Label" parent="Yazilar"]
margin_right = 313.0
margin_bottom = 45.0
text = "yakit : 100"

[node name="yemek" type="Label" parent="Yazilar"]
margin_top = 49.0
margin_right = 313.0
margin_bottom = 94.0
text = "yemek : 100"

[node name="gemiParcasi" type="Label" parent="Yazilar"]
margin_top = 98.0
margin_right = 313.0
margin_bottom = 143.0
text = "gemi parcasi : 5"

[node name="notorParcasi" type="Label" parent="Yazilar"]
margin_top = 147.0
margin_right = 313.0
margin_bottom = 192.0
text = "Motor parcasÄ± : 100"

[node name="Butonlar" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -309.0
margin_top = 45.0
margin_right = -64.0
theme = SubResource( 4 )

[node name="yakitBtn" type="Button" parent="Butonlar"]
margin_right = 245.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
text = "-5 Yemek +10 yakit"

[node name="yemekBtn" type="Button" parent="Butonlar"]
margin_top = 44.0
margin_right = 245.0
margin_bottom = 84.0
rect_min_size = Vector2( 0, 40 )
text = "Yemek Al"

[node name="gemiBtn" type="Button" parent="Butonlar"]
margin_top = 88.0
margin_right = 245.0
margin_bottom = 128.0
rect_min_size = Vector2( 0, 40 )
text = "Yakit Al"

[node name="motorBtn" type="Button" parent="Butonlar"]
margin_top = 132.0
margin_right = 245.0
margin_bottom = 172.0
rect_min_size = Vector2( 0, 40 )
text = "Yakit Al"

[connection signal="pressed" from="Butonlar/yakitBtn" to="." method="_on_yakitBtn_pressed"]
[connection signal="pressed" from="Butonlar/yemekBtn" to="." method="_on_yemekBtn_pressed"]
[connection signal="pressed" from="Butonlar/gemiBtn" to="." method="_on_gemiBtn_pressed"]
[connection signal="pressed" from="Butonlar/motorBtn" to="." method="_on_motorBtn_pressed"]
